# aoc-2023

./: .editorconfig  .gitignore  Cargo.toml  README.md
aoc-lib/: Cargo.toml
aoc-lib/src/: lib.rs
day-01/: Cargo.toml
day-01/src/: lib.rs
day-02/: Cargo.toml
day-02/src/: lib.rs
day-03/: Cargo.toml
day-03/src/: lib.rs
day-04/: Cargo.toml
day-04/src/: lib.rs
