[workspace]
resolver = "2"

members = ["day-*", "aoc-lib"]

[workspace.dependencies]
clap = "4.4.10"
regex = "1.10.2"
phf = { version = "0.11", features = ["macros"] }
itertools = "0.12.0"

# nom = "7.1.3"
# glam = "0.24.2"
# petgraph = "0.6.4"
# rayon = "1.8.0"
# tracing = "0.1.40"
# tracing-subscriber = "0.3.18"
# rstest = "0.18.2"
# rstest_reuse = "0.6.0"
# tracing-tracy = "0.10.4"
# tracy-client = "0.16.4"
# tracy-client-sys = "0.22.0"
# thiserror = "1.0.50"
# dhat = "0.3.2"

# [profile.flamegraph]
# inherits = "release"
# debug = true

# [profile.dhat]
# inherits = "release"
# debug = 1
